style(q3indel): updates suggested and implemented by IDEA